--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 /*Header formatting*/
+
 header{
     display: flex;
     flex-direction: row;
@@ -26,13 +27,22 @@ a{
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     padding: 16px;
+    z-index: 1;
+    position: relative;
 }
 #logo{
     max-height: 96px;
     max-width: 160px;
     padding-right: 16px;
 }
-
+#rectangle{
+    position: absolute;
+    right:0%;
+    top:0%;
+    padding-right:128px;
+    width:204px;
+    height: 204px;
+}
 /*Body formatting*/
 .body1{
     font-family: 'Nunito', sans-serif;
@@ -70,7 +80,7 @@ em{
     max-height: 350px;
     position: absolute;
     left: 80%;
-    bottom: 18%;
+    bottom: 10%;
  }
 #workButton{
     position: absolute;
